<resources>
    <string name="app_name">Positive Activity Jackpot</string>
    <string name="search_hint">Search Location</string>
    <string name="about_content">Placeholder</string>
    <string name="accessibility_toast_prefix">Toast Dialog: </string>
    <string name="ar_popup">This isn\’t a camera, you can\’t take pictures. Move it around and you\’ll find activities to do in your area.</string>
    <string name="main_logo">Positive Activity Jackpot Logo</string>
    <string name="main_create">Create Activity</string>
    <string name="main_create_desc">main menu create activity</string>
    <string name="main_learn">Learn</string>
    <string name="main_coach">Setup</string>
    <string name="main_rate">Rate</string>
    <string name="main_previous">My Activities</string>
    <string name="main_jackpot">Jackpot</string>
    <string name="main_AR">AR</string>
    <string name="main_random">Random</string>
    <string name="main_settings">Settings</string>
    <string name="jackpot_summary">Select the number of participants</string>
    <string name="jackpot_select">Select Activity</string>
    <string name="jackpot_instruct">Pull the handle or shake the phone to have an activity selected for you.</string>
    <string name="jackpot_rolling">*** Rolling ***</string>
    <string name="jackpot_warnselect">First select an activity by pulling the handle!</string>
    <string name="local_select">Click to select a local option (if any are below):</string>
    <string name="local_save">Save Activity</string>
    <string name="tips_create">Choose Jackpot if you would like to have an activity chosen for you, choose Customize if you want to make your own selection, or Find Something Nearby to see activities in your immediate area.</string>
    <string name="tips_localoption">Now that you have selected an activity, choose a local option (if any are listed below, every activity does not have a local option). Then save your activity.</string>
    <string name="tips_summary">This is the last step! Once you\'re done here either go and do your chosen activity or save it for later.</string>
    <string name="tips_jackpot">Here you can spin the wheels to automatically create an activity, you can keep spinning until you find an activity you like.</string>
    <string name="tips_learn">Here you can learn more about this positive activities and why they are good for your mental health!</string>
    <string name="tips_list">Here we walk you through three or four steps to customize an activity that sounds interesting to you! Scroll the options with your finger or pull the lever.</string>
    <string name="tips_prefs">Here you can change application settings, click to toggle items on and off.</string>
    <string name="tips_rate">You can rate each part of an activity. The higher the rating, the more likely they are to show up in your jackpot!</string>
    <string name="tips_saved">These are all the activities you have previously saved. If you click on one, you can navigate or call to the local option (if available), invite others to join you and/or post the activity to your social media, and rate your enjoyment of the activity.</string>
    <string name="tips_setup">This tab allows you to learn more about the app, change your contact list preferences, change your activity preferences, and change application settings.</string>
    <string name="tips_category">Deselect all activities you don\’t enjoy.</string>
    <string name="tips_contacts">These are all the contacts you have in your phone, deselect contacts that you do not wish to have as options when selecting activities.</string>
    <string name="general_ok">Ok</string>
    <string name="general_notips">Do not show this pop-up again</string>
    <string name="home_jackpot">Jackpot!</string>
    <string name="home_customize">Customize an Activity</string>
    <string name="home_nearby">Find Something Nearby</string>
    <string name="home_accessibility">The Augmented Reality portion of this application is not compatible with Accessibility features for the visually impaired.</string>
    <string name="home_setupfirst">Before you can select activities, you need to setup your contacts.\r\n\r\nVisit the setup screen by clicking Settings at the top.</string>
    <string name="home_nogps">Your GPS is currently disabled. Please enable GPS before using this feature.</string>
    <string name="coach_one">I\m Sue, your setup coach. I will help you through the setup of this application.</string>
    <string name="coach_two">First, let me introduce you to the Positive Activities app. Participating in fun, positive activities helps improve the overall quality of life. This is a common psychological tool used in suicide prevention and depression. Even if you don’t suffer from suicidal thoughts or depression, participating in positive activities has been found to help most individuals.</string>
    <string name="coach_three">In the next few slides, I’m going to help you set up this app. First you will be asked to deselect the types of activities that you do not like and then choose individuals in your phone’s contact list who you might want to do an activity with in the future. You will have the option in this app to participate in an activity alone, with one other person (Pair) or in a group.</string>
    <string name="coach_title">Welcome to\r\nPositive Activities</string>
    <string name="saved_emptylist">\r\n\r\n\r\n\r\n\r\n\r\nCreate some activities first!</string>
    <string name="setup_learn">Learn</string>
    <string name="setup_contacts">Contacts</string>
    <string name="setup_activities">Activities</string>
    <string name="setup_prefs">Preferences</string>
    <string name="setup_minactivities">Please select at least 10 activities!</string>
    <string name="setup_mincontacts">Please select at least 5 contacts!</string>
    <string name="eula_activity_title">Eula</string>
    <string name="eula_title">License</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
</resources>