<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMainMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:orientation="vertical"
    android:visibility="invisible" >

    <ImageView
        android:id="@+id/icon_button"
        android:layout_width="fill_parent"
        android:layout_height="65dip"
        android:scaleType="fitXY"
        android:src="@drawable/arheader" />

    <!-- The tabs -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menuback"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dip"
        android:paddingTop="10dip"
        android:scaleType="centerCrop" >

        <View
            android:id="@+id/icon_button1"
            android:layout_width="15dip"
            android:layout_height="fill_parent"
         />

        <view
            android:id="@+id/btnMainCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/togglebtnback_off"
            class="org.t2health.paj.classes.ToggledButton"
            android:contentDescription="@string/main_create_desc"
            style="@style/ScaleFontSmall"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/main_create" />

        <View
            android:id="@+id/icon_button2"
            android:layout_width="8dip"
            android:layout_height="fill_parent" 
        />

        <view
            android:id="@+id/btnMainPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/togglebtnback_off"
            class="org.t2health.paj.classes.ToggledButton"
            android:contentDescription="main menu my activities"
            style="@style/ScaleFontSmall"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/main_previous" />

        <View
            android:id="@+id/icon_button3"
            android:layout_width="8dip"
            android:layout_height="fill_parent"
        />

        <view
            android:id="@+id/btnMainSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/togglebtnback_off"
            class="org.t2health.paj.classes.ToggledButton"
            android:contentDescription="main menu Settings" 
            style="@style/ScaleFontSmall"
            android:text="@string/main_settings" />

        <View
            android:id="@+id/icon_button4"
            android:layout_width="15dip"
            android:layout_height="fill_parent"
         />
    </LinearLayout>

</LinearLayout>