<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        layout="@layout/main_menu" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/mainback"
        android:orientation="vertical" >

        <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="15dp"
                    android:layout_weight="0" />
    
        
        <!-- Box Start -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:android1="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="15dp"
                android:layout_height="fill_parent"
                android:layout_weight="0" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:android1="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/blueboxbutton"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivjackpot"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:contentDescription="@string/home_jackpot"
                    android:src="@drawable/iconjackpot" />

                <TextView
                    android:id="@+id/tvjackpot"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:ellipsize="marquee"
                    android:gravity="center_vertical|center_horizontal"
                    android:minLines="2"
                    android:singleLine="false"
                    android:focusable="true"
                    android:text="@string/home_jackpot"
                    android:textColor="#ffffff"
                    style="@style/ScaleFontLarge"
                    android:textStyle="bold" />

                
            </LinearLayout>

            <TextView
                android:layout_width="15dp"
                android:layout_height="fill_parent"
                android:layout_weight="0" />
        </LinearLayout>
        <!-- Box End -->
        
        <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="15dp"
                    android:layout_weight="0" />
        
         <!-- Box Start -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:android1="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="15dp"
                android:layout_height="fill_parent"
                android:layout_weight="0" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:android1="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/blueboxbutton"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivlist"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:contentDescription="@string/home_customize"
                    android:src="@drawable/icongear" />

                <TextView
                    android:id="@+id/tvlist"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:ellipsize="marquee"
                    android:gravity="center_vertical|center_horizontal"
                    android:minLines="2"
                    android:singleLine="false"
                    android:focusable="true"
                    android:text="@string/home_customize"
                    android:textColor="#ffffff"
                    style="@style/ScaleFontLarge"
                    android:textStyle="bold" />

                
            </LinearLayout>

            <TextView
                android:layout_width="15dp"
                android:layout_height="fill_parent"
                android:layout_weight="0" />
        </LinearLayout>
        <!-- Box End -->
        
        <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="15dp"
                    android:layout_weight="0" />
        
         <!-- Box Start -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:android1="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="15dp"
                android:layout_height="fill_parent"
                android:layout_weight="0" />

            <LinearLayout
                android:id="@+id/llar"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/blueboxbutton"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ivar"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="5"
                    android:contentDescription="@string/home_nearby"
                    android:src="@drawable/iconnav" />

                <TextView
                    android:id="@+id/tvar"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:ellipsize="marquee"
                    android:gravity="center_vertical|center_horizontal"
                    android:minLines="2"
                    android:singleLine="false"
                    android:focusable="true"
                    android:text="@string/home_nearby"
                    android:textColor="#ffffff"
                    style="@style/ScaleFontLarge"
                    android:textStyle="bold" />

                
            </LinearLayout>

            <TextView
                android:layout_width="15dp"
                android:layout_height="fill_parent"
                android:layout_weight="0" />
        </LinearLayout>
        <!-- Box End -->

<TextView
                    android:layout_width="fill_parent"
                    android:layout_height="15dp"
                    android:layout_weight="0" />
    </LinearLayout>
</LinearLayout>